# arcade

./: .gitignore  MANIFEST.in  Pipfile  README.md  pyproject.toml  setup.py
.github/workflows/: test.yaml  tests.py
arcade/: __init__.py  commands.py  create_artifacts.py  definitions.py  main.py  parsing.py  utils.py
arcade/themes/baseline/: base.html  footer.html  full_list.html  post.html
arcade/themes/baseline/static/: style.css
arcade_generator/: __init__.py  commands.py  create_artifacts.py  errors.py  parsing.py
tests/: test-side-effects.py  test_side_effects.py
themes/baseline/: #index.html#  .#index.html  base.html  footer.html  full_list.html  index.html  post.html
themes/baseline/static/: style.css
